@@ -1,16 +1,13 @@
 package br.edu.ufape.plataformaeventos.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import br.edu.ufape.plataformaeventos.dto.StudentProfileDTO;
 import br.edu.ufape.plataformaeventos.dto.UserDTO;
 import br.edu.ufape.plataformaeventos.model.StudentProfile;
 import br.edu.ufape.plataformaeventos.model.User;
-import br.edu.ufape.plataformaeventos.repository.EventRepository;
 import br.edu.ufape.plataformaeventos.repository.StudentProfileRepository;
 import br.edu.ufape.plataformaeventos.repository.UserRepository;
 import br.edu.ufape.plataformaeventos.util.UserRole;
@@ -20,14 +17,14 @@ import jakarta.transaction.Transactional;
 @Service
 public class StudentProfileService {
 
-    @Autowired
     private UserRepository userRepository;
-
-    @Autowired
     private StudentProfileRepository studentProfileRepository;
 
-    @Autowired
-    private EventRepository eventRepository;
+    public StudentProfileService(UserRepository userRepository, StudentProfileRepository studentProfileRepository){
+        this.userRepository = userRepository;
+        this.studentProfileRepository = studentProfileRepository;
+    }
+
 
     @Transactional
     public StudentProfile createStudentProfile(UserDTO userDTO, StudentProfileDTO studentProfileDTO) {
@@ -93,6 +90,6 @@ public class StudentProfileService {
     public List<StudentProfileDTO> getAllStudentProfiles() {
         return studentProfileRepository.findAll().stream()
                 .map(StudentProfile::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
